--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "require": {
-    "craftcms/cms": "^3.4.0",
+    "craftcms/cms": "3.4.4.1",
     "craftcms/element-api": "2.6.0",
     "vlucas/phpdotenv": "^3.4.0"
   },
